--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
   </table>
 
   <table class="table table-bordered bordered-cells wide-only">
+    <caption>
+      This is a table with a caption
+    </caption>
     <thead>
       <tr>
         <th id="reason-for-payment-desktop" scope="col">Reason for Payment</th>
