--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container">
   <h1 tabindex="0">Accessible Responsive Table Test</h1>
 
-  <table class="table visible-sm visible-xs no-table-row-border border-row-groups">
+  <table class="table visible-xs no-table-row-border border-row-groups">
     <caption>
       This is a table with a caption
     </caption>
@@ -51,7 +51,7 @@
     </tbody>
   </table>
 
-  <table class="table table-bordered hidden-sm hidden-xs">
+  <table class="table table-bordered hidden-xs">
     <caption>
       This is a table with a caption
     </caption>
