test to see if I can make changes

--- a/table/index.html
+++ b/table/index.html
@@ -57,7 +57,7 @@
     </caption>
     <thead>
       <tr>
-        <th id="reason-for-payment-desktop" scope="col">Reason for Payment</th>
+        <th scope="col">Reason for Payment</th>
         <th id="payment-type-desktop" scope="col">Payment Type</th>
         <th id="tax-year-desktop" scope="col">Tax Year</th>
         <th id="amount-owed-desktop" scope="col">Amount Owed</th>
