removed ids and headers from desktop table in favor of scope

--- a/table/index.html
+++ b/table/index.html
@@ -58,22 +58,22 @@
     <thead>
       <tr>
         <th scope="col">Reason for Payment</th>
-        <th id="payment-type-desktop" scope="col">Payment Type</th>
-        <th id="tax-year-desktop" scope="col">Tax Year</th>
-        <th id="amount-owed-desktop" scope="col">Amount Owed</th>
+        <th scope="col">Payment Type</th>
+        <th scope="col">Tax Year</th>
+        <th scope="col">Amount Owed</th>
       </tr>
     </thead>
     <tr>
-        <td headers="Reason-for-Payment">Shared Responsibility Payment (select Installment Agreement)</td>
-        <td headers="Payment-Type">Health Care (Form 1040)</td>
-        <td headers="Tax-Year">2014</td>
-        <td headers="Amount-Owed">$644.57</td>
+        <td>Shared Responsibility Payment (select Installment Agreement)</td>
+        <td>Health Care (Form 1040)</td>
+        <td>2014</td>
+        <td>$644.57</td>
     </tr>
     <tr>
-        <td headers="Reason-for-Payment">Tax Return or Notice</td>
-        <td headers="Payment-Type">1040</td>
-        <td headers="Tax-Year">2013</td>
-        <td headers="Amount-Owed">$205.25</td>
+        <td>Tax Return or Notice</td>
+        <td>1040</td>
+        <td>2013</td>
+        <td>$205.25</td>
     </tr>
   </table>
 
