testing scope on 1 col table

--- a/table/index.html
+++ b/table/index.html
@@ -34,8 +34,8 @@
       <tr><td headers="reason-for-payment-desktop">Shared Responsibility Payment (select Installment Agreement)</td></tr>
       <tr><th>Payment Type</th></tr>
       <tr><td headers="payment-type-desktop">Health Care (Form 1040)</td></tr>
-      <tr><th>Tax Year</th></tr>
-      <tr><td headers="tax-year-desktop">2014</td></tr>
+      <tr><th scope="col">Tax Year</th></tr>
+      <tr><td scope="row">2014</td></tr>
       <tr><th>Amount Owed</th></tr>
       <tr><td headers="amount-owed-desktop">$644.57</td></tr>
     </tbody>
@@ -44,8 +44,8 @@
       <tr><td headers="reason-for-payment-desktop" >Tax Return or Notice</td></tr>
       <tr><th>Payment Type</th></tr>
       <tr><td headers="payment-type-desktop">1040</td></tr>
-      <tr><th>Tax Year</th></tr>
-      <tr><td headers="tax-year-desktop">2013</td></tr>
+      <tr><th scope="col">Tax Year</th></tr>
+      <tr><td scope="row">2013</td></tr>
       <tr><th>Amount Owed</th></tr>
       <tr><td headers="amount-owed-desktop">$205.25</td></tr>
     </tbody>
