Separated table on mobile into 2 tables as test

--- a/table/index.html
+++ b/table/index.html
@@ -51,6 +51,33 @@
     </tbody>
   </table>
 
+  <table class="table visible-xs no-table-row-border border-row-groups">
+    <caption>
+      Section 1
+    </caption>
+    <tbody>
+      <tr>
+        <th scope="col">Reason for Payment</th>
+      </tr>
+      <tr>
+        <td>Shared Responsibility Payment (select Installment Agreement)</td>
+      </tr>
+    </tbody>
+  </table>
+  <table class="table visible-xs no-table-row-border border-row-groups">
+    <caption>
+      Section 2
+    </caption>
+    <tbody>
+      <tr>
+        <th scope="col">Tax Year</th>
+      </tr>
+      <tr>
+        <td scope="row">2013</td>
+      </tr>
+    </tbody>
+  </table>
+
   <table class="table table-bordered hidden-xs">
     <caption>
       This is a table with a caption
