added some ids and headers to separate tables

--- a/table/index.html
+++ b/table/index.html
@@ -57,10 +57,18 @@
     </caption>
     <tbody>
       <tr>
-        <th scope="col">Reason for Payment</th>
+        <th id="reason-for-payment-1">Reason for Payment</th>
       </tr>
       <tr>
-        <td>Shared Responsibility Payment (select Installment Agreement)</td>
+        <td headers="reason-for-payment-1">Shared Responsibility Payment (select Installment Agreement)</td>
+      </tr>
+    </tbody>
+    <tbody>
+      <tr>
+        <th id="tax-year-1">Tax Year</th>
+      </tr>
+      <tr>
+        <td headers="tax-year-1">2013</td>
       </tr>
     </tbody>
   </table>
