--- a/table/index.html
+++ b/table/index.html
@@ -58,9 +58,11 @@
     <tbody>
       <tr>
         <th id="reason-for-payment-1">Reason for Payment</th>
+        <th id="test">blah</th>
       </tr>
       <tr>
         <td headers="reason-for-payment-1">Shared Responsibility Payment (select Installment Agreement)</td>
+        <td headers="test">scrum</td>
       </tr>
     </tbody>
     <tbody>
