--- a/table/index.html
+++ b/table/index.html
@@ -31,23 +31,23 @@
     </caption>
     <tbody>
       <tr><th>Reason for Payment</th></tr>
-      <tr><td headers="reason-for-payment-desktop">Shared Responsibility Payment (select Installment Agreement)</td></tr>
+      <tr><td>Shared Responsibility Payment (select Installment Agreement)</td></tr>
       <tr><th>Payment Type</th></tr>
-      <tr><td headers="payment-type-desktop">Health Care (Form 1040)</td></tr>
-      <tr><th scope="col">Tax Year</th></tr>
-      <tr><td scope="row">2014</td></tr>
+      <tr><td>Health Care (Form 1040)</td></tr>
+      <tr><th>Tax Year</th></tr>
+      <tr><td>2014</td></tr>
       <tr><th>Amount Owed</th></tr>
-      <tr><td headers="amount-owed-desktop">$644.57</td></tr>
+      <tr><td>$644.57</td></tr>
     </tbody>
     <tbody>
       <tr><th>Reason for Payment</th></tr>
-      <tr><td headers="reason-for-payment-desktop" >Tax Return or Notice</td></tr>
+      <tr><td>Tax Return or Notice</td></tr>
       <tr><th>Payment Type</th></tr>
-      <tr><td headers="payment-type-desktop">1040</td></tr>
-      <tr><th scope="col">Tax Year</th></tr>
-      <tr><td scope="row">2013</td></tr>
+      <tr><td>1040</td></tr>
+      <tr><th>Tax Year</th></tr>
+      <tr><td>2013</td></tr>
       <tr><th>Amount Owed</th></tr>
-      <tr><td headers="amount-owed-desktop">$205.25</td></tr>
+      <tr><td>$205.25</td></tr>
     </tbody>
   </table>
 
