--- a/table/test.html
+++ b/table/test.html
@@ -38,7 +38,7 @@
   <div class="container">
   <h1 tabindex="0">Accessible Responsive Table Test</h1>
 
-  <table tabindex="0" class="table bordered-cells visible-xs space-between-tbody">
+  <table class="table bordered-cells visible-xs space-between-tbody">
     <caption>This is our table. There are many like it but this one is ours.</caption>
     <tbody>
         <tr><th id="RfP-0">Reason for Payment</th><td header="RfP-0">Shared Responsibility Payment (select Installment Agreement)</td></tr>
@@ -71,7 +71,7 @@
   </table>
   --->
 
-  <table tabindex="0" class="table bordered-cells hidden-xs">
+  <table class="table bordered-cells hidden-xs">
     <caption>This is our table. There are many like it but this one is ours.</caption>
       <tr>
         <th id="Reason-for-Payment">Reason for Payment</th>
