--- a/table/test.html
+++ b/table/test.html
@@ -55,7 +55,7 @@
     </tbody>
   </table>
 
-  <table tabindex="0" class="table bordered-cells visible-xs space-between-tbody">
+  <table class="table bordered-cells visible-xs space-between-tbody">
     <caption>This is our table.</caption>
     <tbody>
         <tr><td class="header">Reason for Payment</td><td>Shared Responsibility Payment (select Installment Agreement)</td></tr>
@@ -72,7 +72,7 @@
   </table>
 -->
 
-  <table tabindex="0" class="table bordered-cells visible-xs space-between-tbody">
+  <table class="table bordered-cells visible-xs space-between-tbody">
     <caption>This is our table.</caption>
     <tbody>
         <tr><th scope="row">Reason for Payment</th><td>Shared Responsibility Payment (select Installment Agreement)</td></tr>
