Added some bootstrap border overrides

--- a/table/index.html
+++ b/table/index.html
@@ -15,8 +15,21 @@
   }
 
   table.border-row-groups > tbody {
-    border: 1px solid #ccc;
+    border-top: 1px solid #ccc;
   }
+
+  .table-bordered {
+    border: 0px;
+  }
+
+  .table-bordered > thead > tr > th {
+    border: 0px;
+  }
+  
+  .table-bordered > tbody > tr > th, .table-bordered > tbody > tr > td {
+    border: 0px;
+  }
+
 
   </style>
 </head>
